--- a/main.ipynb
+++ b/main.ipynb
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1b13bdc",
+   "id": "b7ae5dbb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3340,7 +3340,7 @@
     "    \n",
     "    connection = ps.connect(\n",
     "        user=\"postgres\",\n",
-    "        password=\"Good,\n",
+    "        password=password,\n",
     "        database=\"dvdRental\"\n",
     "    )\n",
     "    \n",
@@ -3517,7 +3517,7 @@
     "    \n",
     "    connection = ps.connect(\n",
     "        user=\"postgres\",\n",
-    "        password=\"Good@123good\",\n",
+    "        password=password,\n",
     "        database=\"dvdRental\"\n",
     "    )\n",
     "    \n",
@@ -3633,7 +3633,7 @@
     "    \n",
     "    connection = ps.connect(\n",
     "        user=\"postgres\",\n",
-    "        password=\"Good@123good\",\n",
+    "        password=password,\n",
     "        database=\"dvdRental\"\n",
     "    )\n",
     "    \n",
@@ -3803,7 +3803,7 @@
     "try:\n",
     "    connection = ps.connect(\n",
     "        database= \"dvdRental\",\n",
-    "        password=\"Good@123good\",\n",
+    "        password=password,\n",
     "        user = \"postgres\")\n",
     "        \n",
     "    cur = connection.cursor() \n",
