--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "a92dcc59",
    "metadata": {},
    "outputs": [],
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "6712741d",
    "metadata": {},
    "outputs": [
@@ -1322,7 +1322,7 @@
        "4    16:50         21:35   4h 45m      1 stop         No info  13302  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "29a9c09d",
    "metadata": {},
    "outputs": [
@@ -1470,7 +1470,7 @@
        "10682         No info  11753  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1482,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "2b86ddcd",
    "metadata": {},
    "outputs": [
@@ -1503,7 +1503,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "d97f4fda",
    "metadata": {},
    "outputs": [
@@ -1525,7 +1525,7 @@
        "220"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "cacde1ec",
    "metadata": {},
    "outputs": [],
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "f4032f6a",
    "metadata": {},
    "outputs": [],
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "14c0646b",
    "metadata": {},
    "outputs": [
@@ -1602,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "53498ab1",
    "metadata": {},
    "outputs": [],
@@ -1612,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "id": "5d58bd99",
    "metadata": {},
    "outputs": [],
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 36,
    "id": "bc92a768",
    "metadata": {},
    "outputs": [
@@ -1664,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 37,
    "id": "0b873ef1",
    "metadata": {},
    "outputs": [
@@ -1688,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 38,
    "id": "a0956107",
    "metadata": {},
    "outputs": [
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 39,
    "id": "d8bd71f8",
    "metadata": {},
    "outputs": [
@@ -1736,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 40,
    "id": "ca5dfcd0",
    "metadata": {},
    "outputs": [
@@ -1904,7 +1904,7 @@
        "[10462 rows x 6 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1917,7 +1917,388 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 66,
+   "id": "7d875fbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def duration_split(x):\n",
+    "    mins=0\n",
+    "    hours=0\n",
+    "    x =x.split()\n",
+    "    if len(x)==1:\n",
+    "        x=\"\".join(x)\n",
+    "        if x.endswith(\"h\"):\n",
+    "            hours= x[:-1]\n",
+    "        else:\n",
+    "            mins= x[:-1]\n",
+    "        \n",
+    "    else:\n",
+    "        hours=x[0].strip(\"h\")\n",
+    "        mins= x[1].strip(\"m\")\n",
+    "    return  hours, mins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "4d4a72a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        50\n",
+       "1        25\n",
+       "2         0\n",
+       "3        25\n",
+       "4        45\n",
+       "         ..\n",
+       "10678    30\n",
+       "10679    35\n",
+       "10680     0\n",
+       "10681    40\n",
+       "10682    20\n",
+       "Name: Duration, Length: 10462, dtype: object"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train[\"Duration\"].apply(lambda x: duration_split(x)[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a1a687f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "3a3d6d10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>Date_of_Journey</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>Destination</th>\n",
+       "      <th>Route</th>\n",
+       "      <th>Dep_Time</th>\n",
+       "      <th>Arrival_Time</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Total_Stops</th>\n",
+       "      <th>Additional_Info</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>day of the journey</th>\n",
+       "      <th>month of the journey</th>\n",
+       "      <th>year of the journey</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>IndiGo</td>\n",
+       "      <td>2019-03-24</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>BLR → DEL</td>\n",
+       "      <td>22:20</td>\n",
+       "      <td>01:10 22 Mar</td>\n",
+       "      <td>2h 50m</td>\n",
+       "      <td>non-stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>3897</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>March</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Air India</td>\n",
+       "      <td>2019-05-01</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>CCU → IXR → BBI → BLR</td>\n",
+       "      <td>05:50</td>\n",
+       "      <td>13:15</td>\n",
+       "      <td>7h 25m</td>\n",
+       "      <td>2 stops</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>7662</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>May</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jet Airways</td>\n",
+       "      <td>2019-06-09</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>Cochin</td>\n",
+       "      <td>DEL → LKO → BOM → COK</td>\n",
+       "      <td>09:25</td>\n",
+       "      <td>04:25 10 Jun</td>\n",
+       "      <td>19h</td>\n",
+       "      <td>2 stops</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>13882</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>June</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>IndiGo</td>\n",
+       "      <td>2019-05-12</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>CCU → NAG → BLR</td>\n",
+       "      <td>18:05</td>\n",
+       "      <td>23:30</td>\n",
+       "      <td>5h 25m</td>\n",
+       "      <td>1 stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>6218</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>May</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>IndiGo</td>\n",
+       "      <td>2019-03-01</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>BLR → NAG → DEL</td>\n",
+       "      <td>16:50</td>\n",
+       "      <td>21:35</td>\n",
+       "      <td>4h 45m</td>\n",
+       "      <td>1 stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>13302</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>March</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10678</th>\n",
+       "      <td>Air Asia</td>\n",
+       "      <td>2019-04-09</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>CCU → BLR</td>\n",
+       "      <td>19:55</td>\n",
+       "      <td>22:25</td>\n",
+       "      <td>2h 30m</td>\n",
+       "      <td>non-stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>4107</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>April</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10679</th>\n",
+       "      <td>Air India</td>\n",
+       "      <td>2019-04-27</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>CCU → BLR</td>\n",
+       "      <td>20:45</td>\n",
+       "      <td>23:20</td>\n",
+       "      <td>2h 35m</td>\n",
+       "      <td>non-stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>4145</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>April</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10680</th>\n",
+       "      <td>Jet Airways</td>\n",
+       "      <td>2019-04-27</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>BLR → DEL</td>\n",
+       "      <td>08:20</td>\n",
+       "      <td>11:20</td>\n",
+       "      <td>3h</td>\n",
+       "      <td>non-stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>7229</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>April</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10681</th>\n",
+       "      <td>Vistara</td>\n",
+       "      <td>2019-03-01</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>BLR → DEL</td>\n",
+       "      <td>11:30</td>\n",
+       "      <td>14:10</td>\n",
+       "      <td>2h 40m</td>\n",
+       "      <td>non-stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>12648</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>March</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10682</th>\n",
+       "      <td>Air India</td>\n",
+       "      <td>2019-05-09</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>Cochin</td>\n",
+       "      <td>DEL → GOI → BOM → COK</td>\n",
+       "      <td>10:55</td>\n",
+       "      <td>19:15</td>\n",
+       "      <td>8h 20m</td>\n",
+       "      <td>2 stops</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>11753</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>May</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10462 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Airline Date_of_Journey    Source Destination  \\\n",
+       "0           IndiGo      2019-03-24  Banglore   New Delhi   \n",
+       "1        Air India      2019-05-01   Kolkata    Banglore   \n",
+       "2      Jet Airways      2019-06-09     Delhi      Cochin   \n",
+       "3           IndiGo      2019-05-12   Kolkata    Banglore   \n",
+       "4           IndiGo      2019-03-01  Banglore   New Delhi   \n",
+       "...            ...             ...       ...         ...   \n",
+       "10678     Air Asia      2019-04-09   Kolkata    Banglore   \n",
+       "10679    Air India      2019-04-27   Kolkata    Banglore   \n",
+       "10680  Jet Airways      2019-04-27  Banglore       Delhi   \n",
+       "10681      Vistara      2019-03-01  Banglore   New Delhi   \n",
+       "10682    Air India      2019-05-09     Delhi      Cochin   \n",
+       "\n",
+       "                       Route Dep_Time  Arrival_Time Duration Total_Stops  \\\n",
+       "0                  BLR → DEL    22:20  01:10 22 Mar   2h 50m    non-stop   \n",
+       "1      CCU → IXR → BBI → BLR    05:50         13:15   7h 25m     2 stops   \n",
+       "2      DEL → LKO → BOM → COK    09:25  04:25 10 Jun      19h     2 stops   \n",
+       "3            CCU → NAG → BLR    18:05         23:30   5h 25m      1 stop   \n",
+       "4            BLR → NAG → DEL    16:50         21:35   4h 45m      1 stop   \n",
+       "...                      ...      ...           ...      ...         ...   \n",
+       "10678              CCU → BLR    19:55         22:25   2h 30m    non-stop   \n",
+       "10679              CCU → BLR    20:45         23:20   2h 35m    non-stop   \n",
+       "10680              BLR → DEL    08:20         11:20       3h    non-stop   \n",
+       "10681              BLR → DEL    11:30         14:10   2h 40m    non-stop   \n",
+       "10682  DEL → GOI → BOM → COK    10:55         19:15   8h 20m     2 stops   \n",
+       "\n",
+       "      Additional_Info  Price day of the journey month of the journey  \\\n",
+       "0             No info   3897             Sunday                March   \n",
+       "1             No info   7662          Wednesday                  May   \n",
+       "2             No info  13882             Sunday                 June   \n",
+       "3             No info   6218             Sunday                  May   \n",
+       "4             No info  13302             Friday                March   \n",
+       "...               ...    ...                ...                  ...   \n",
+       "10678         No info   4107            Tuesday                April   \n",
+       "10679         No info   4145           Saturday                April   \n",
+       "10680         No info   7229           Saturday                April   \n",
+       "10681         No info  12648             Friday                March   \n",
+       "10682         No info  11753           Thursday                  May   \n",
+       "\n",
+       "       year of the journey  \n",
+       "0                     2019  \n",
+       "1                     2019  \n",
+       "2                     2019  \n",
+       "3                     2019  \n",
+       "4                     2019  \n",
+       "...                    ...  \n",
+       "10678                 2019  \n",
+       "10679                 2019  \n",
+       "10680                 2019  \n",
+       "10681                 2019  \n",
+       "10682                 2019  \n",
+       "\n",
+       "[10462 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "008cfeb5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9e431dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "8cabfe1b",
    "metadata": {},
    "outputs": [],
@@ -1928,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 18,
    "id": "9867dead",
    "metadata": {},
    "outputs": [],
@@ -1939,7 +2320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 19,
    "id": "0f13f5e5",
    "metadata": {},
    "outputs": [],
@@ -1951,7 +2332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 20,
    "id": "d6fec931",
    "metadata": {},
    "outputs": [],
@@ -1979,7 +2360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 21,
    "id": "cb2f3742",
    "metadata": {},
    "outputs": [],
@@ -1991,7 +2372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 22,
    "id": "9a07f564",
    "metadata": {},
    "outputs": [
@@ -2001,7 +2382,7 @@
        "29447176630623.797"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2016,7 +2397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 23,
    "id": "7005bee1",
    "metadata": {},
    "outputs": [],
@@ -2030,17 +2411,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 24,
    "id": "91a4a820",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1571.6584868314776"
+       "1574.2809324259667"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2055,11 +2436,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "ed108256",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(29447176630623.797, 1574.2809324259667)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "29447176630623.797, 1574.2809324259667"
+   ]
   },
   {
    "cell_type": "code",
