--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1918,7 +1918,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "7d875fbd",
+   "id": "c94ccf22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1941,48 +1941,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "4d4a72a6",
+   "execution_count": 81,
+   "id": "089f6666",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train[\"Duration\"]=train[\"Duration\"].apply(lambda x: duration_split(x)[0]).astype(int) * 60  + \\\n",
+    "train[\"Duration\"].apply(lambda x: duration_split(x)[1]).astype(int) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "d79dd1eb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0        50\n",
-       "1        25\n",
-       "2         0\n",
-       "3        25\n",
-       "4        45\n",
-       "         ..\n",
-       "10678    30\n",
-       "10679    35\n",
-       "10680     0\n",
-       "10681    40\n",
-       "10682    20\n",
-       "Name: Duration, Length: 10462, dtype: object"
+       "1 stop      5625\n",
+       "non-stop    3475\n",
+       "2 stops     1318\n",
+       "3 stops       43\n",
+       "4 stops        1\n",
+       "Name: Total_Stops, dtype: int64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train[\"Duration\"].apply(lambda x: duration_split(x)[1])"
+    "train.Total_Stops.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "21f5c9d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapping= {\"non-stop\":0, \"1 stop\":1, \"2 stops\":2, \"3 stops\":3, \"4 stops\":4}\n",
+    "train[\"Total_Stops\"]=train.Total_Stops.map(mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "a4e658e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#train[\"Route\"].apply(lambda x: x.split(\"→\")).str[5].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "f8a890bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Jet Airways                          3700\n",
+       "IndiGo                               2043\n",
+       "Air India                            1694\n",
+       "Multiple carriers                    1196\n",
+       "SpiceJet                              815\n",
+       "Vistara                               478\n",
+       "Air Asia                              319\n",
+       "GoAir                                 194\n",
+       "Multiple carriers Premium economy      13\n",
+       "Jet Airways Business                    6\n",
+       "Vistara Premium economy                 3\n",
+       "Trujet                                  1\n",
+       "Name: Airline, dtype: int64"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train[\"Airline\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a1a687f",
+   "id": "966f712c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train[\"Airline\"].replace(\"Multiple carriers Premium economy\", \"Multiple carriers\", inplace=True)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "3a3d6d10",
+   "execution_count": null,
+   "id": "3ec604bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install lazypredict\n",
+    "from lazypredict.Supervised import LazyRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "79677990",
    "metadata": {},
    "outputs": [
     {
@@ -2032,8 +2104,8 @@
        "      <td>BLR → DEL</td>\n",
        "      <td>22:20</td>\n",
        "      <td>01:10 22 Mar</td>\n",
-       "      <td>2h 50m</td>\n",
-       "      <td>non-stop</td>\n",
+       "      <td>170</td>\n",
+       "      <td>0</td>\n",
        "      <td>No info</td>\n",
        "      <td>3897</td>\n",
        "      <td>Sunday</td>\n",
@@ -2049,8 +2121,8 @@
        "      <td>CCU → IXR → BBI → BLR</td>\n",
        "      <td>05:50</td>\n",
        "      <td>13:15</td>\n",
-       "      <td>7h 25m</td>\n",
-       "      <td>2 stops</td>\n",
+       "      <td>445</td>\n",
+       "      <td>2</td>\n",
        "      <td>No info</td>\n",
        "      <td>7662</td>\n",
        "      <td>Wednesday</td>\n",
@@ -2066,8 +2138,8 @@
        "      <td>DEL → LKO → BOM → COK</td>\n",
        "      <td>09:25</td>\n",
        "      <td>04:25 10 Jun</td>\n",
-       "      <td>19h</td>\n",
-       "      <td>2 stops</td>\n",
+       "      <td>1140</td>\n",
+       "      <td>2</td>\n",
        "      <td>No info</td>\n",
        "      <td>13882</td>\n",
        "      <td>Sunday</td>\n",
@@ -2083,8 +2155,8 @@
        "      <td>CCU → NAG → BLR</td>\n",
        "      <td>18:05</td>\n",
        "      <td>23:30</td>\n",
-       "      <td>5h 25m</td>\n",
-       "      <td>1 stop</td>\n",
+       "      <td>325</td>\n",
+       "      <td>1</td>\n",
        "      <td>No info</td>\n",
        "      <td>6218</td>\n",
        "      <td>Sunday</td>\n",
@@ -2100,8 +2172,8 @@
        "      <td>BLR → NAG → DEL</td>\n",
        "      <td>16:50</td>\n",
        "      <td>21:35</td>\n",
-       "      <td>4h 45m</td>\n",
-       "      <td>1 stop</td>\n",
+       "      <td>285</td>\n",
+       "      <td>1</td>\n",
        "      <td>No info</td>\n",
        "      <td>13302</td>\n",
        "      <td>Friday</td>\n",
@@ -2134,8 +2206,8 @@
        "      <td>CCU → BLR</td>\n",
        "      <td>19:55</td>\n",
        "      <td>22:25</td>\n",
-       "      <td>2h 30m</td>\n",
-       "      <td>non-stop</td>\n",
+       "      <td>150</td>\n",
+       "      <td>0</td>\n",
        "      <td>No info</td>\n",
        "      <td>4107</td>\n",
        "      <td>Tuesday</td>\n",
@@ -2151,8 +2223,8 @@
        "      <td>CCU → BLR</td>\n",
        "      <td>20:45</td>\n",
        "      <td>23:20</td>\n",
-       "      <td>2h 35m</td>\n",
-       "      <td>non-stop</td>\n",
+       "      <td>155</td>\n",
+       "      <td>0</td>\n",
        "      <td>No info</td>\n",
        "      <td>4145</td>\n",
        "      <td>Saturday</td>\n",
@@ -2168,8 +2240,8 @@
        "      <td>BLR → DEL</td>\n",
        "      <td>08:20</td>\n",
        "      <td>11:20</td>\n",
-       "      <td>3h</td>\n",
-       "      <td>non-stop</td>\n",
+       "      <td>180</td>\n",
+       "      <td>0</td>\n",
        "      <td>No info</td>\n",
        "      <td>7229</td>\n",
        "      <td>Saturday</td>\n",
@@ -2185,8 +2257,8 @@
        "      <td>BLR → DEL</td>\n",
        "      <td>11:30</td>\n",
        "      <td>14:10</td>\n",
-       "      <td>2h 40m</td>\n",
-       "      <td>non-stop</td>\n",
+       "      <td>160</td>\n",
+       "      <td>0</td>\n",
        "      <td>No info</td>\n",
        "      <td>12648</td>\n",
        "      <td>Friday</td>\n",
@@ -2202,8 +2274,8 @@
        "      <td>DEL → GOI → BOM → COK</td>\n",
        "      <td>10:55</td>\n",
        "      <td>19:15</td>\n",
-       "      <td>8h 20m</td>\n",
-       "      <td>2 stops</td>\n",
+       "      <td>500</td>\n",
+       "      <td>2</td>\n",
        "      <td>No info</td>\n",
        "      <td>11753</td>\n",
        "      <td>Thursday</td>\n",
@@ -2229,18 +2301,18 @@
        "10681      Vistara      2019-03-01  Banglore   New Delhi   \n",
        "10682    Air India      2019-05-09     Delhi      Cochin   \n",
        "\n",
-       "                       Route Dep_Time  Arrival_Time Duration Total_Stops  \\\n",
-       "0                  BLR → DEL    22:20  01:10 22 Mar   2h 50m    non-stop   \n",
-       "1      CCU → IXR → BBI → BLR    05:50         13:15   7h 25m     2 stops   \n",
-       "2      DEL → LKO → BOM → COK    09:25  04:25 10 Jun      19h     2 stops   \n",
-       "3            CCU → NAG → BLR    18:05         23:30   5h 25m      1 stop   \n",
-       "4            BLR → NAG → DEL    16:50         21:35   4h 45m      1 stop   \n",
-       "...                      ...      ...           ...      ...         ...   \n",
-       "10678              CCU → BLR    19:55         22:25   2h 30m    non-stop   \n",
-       "10679              CCU → BLR    20:45         23:20   2h 35m    non-stop   \n",
-       "10680              BLR → DEL    08:20         11:20       3h    non-stop   \n",
-       "10681              BLR → DEL    11:30         14:10   2h 40m    non-stop   \n",
-       "10682  DEL → GOI → BOM → COK    10:55         19:15   8h 20m     2 stops   \n",
+       "                       Route Dep_Time  Arrival_Time  Duration  Total_Stops  \\\n",
+       "0                  BLR → DEL    22:20  01:10 22 Mar       170            0   \n",
+       "1      CCU → IXR → BBI → BLR    05:50         13:15       445            2   \n",
+       "2      DEL → LKO → BOM → COK    09:25  04:25 10 Jun      1140            2   \n",
+       "3            CCU → NAG → BLR    18:05         23:30       325            1   \n",
+       "4            BLR → NAG → DEL    16:50         21:35       285            1   \n",
+       "...                      ...      ...           ...       ...          ...   \n",
+       "10678              CCU → BLR    19:55         22:25       150            0   \n",
+       "10679              CCU → BLR    20:45         23:20       155            0   \n",
+       "10680              BLR → DEL    08:20         11:20       180            0   \n",
+       "10681              BLR → DEL    11:30         14:10       160            0   \n",
+       "10682  DEL → GOI → BOM → COK    10:55         19:15       500            2   \n",
        "\n",
        "      Additional_Info  Price day of the journey month of the journey  \\\n",
        "0             No info   3897             Sunday                March   \n",
@@ -2271,7 +2343,7 @@
        "[10462 rows x 14 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2283,7 +2355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "008cfeb5",
+   "id": "74da9c6d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2291,7 +2363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9e431dd",
+   "id": "c3cea61e",
    "metadata": {},
    "outputs": [],
    "source": []
