--- a/work.ipynb
+++ b/work.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "4b0fe05f",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
        "[3870 rows x 44 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "1f3cf8a7",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,8 +455,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "4be29c9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3870 entries, 0 to 3869\n",
+      "Data columns (total 44 columns):\n",
+      " #   Column                              Non-Null Count  Dtype  \n",
+      "---  ------                              --------------  -----  \n",
+      " 0   ID                                  3870 non-null   object \n",
+      " 1   District                            3870 non-null   object \n",
+      " 2   Block                               3870 non-null   object \n",
+      " 3   CultLand                            3870 non-null   int64  \n",
+      " 4   CropCultLand                        3870 non-null   int64  \n",
+      " 5   LandPreparationMethod               3870 non-null   object \n",
+      " 6   CropTillageDate                     3870 non-null   object \n",
+      " 7   CropTillageDepth                    3870 non-null   int64  \n",
+      " 8   CropEstMethod                       3870 non-null   object \n",
+      " 9   RcNursEstDate                       3787 non-null   object \n",
+      " 10  SeedingSowingTransplanting          3870 non-null   object \n",
+      " 11  SeedlingsPerPit                     3581 non-null   float64\n",
+      " 12  NursDetFactor                       3581 non-null   object \n",
+      " 13  TransDetFactor                      3581 non-null   object \n",
+      " 14  TransplantingIrrigationHours        3677 non-null   float64\n",
+      " 15  TransplantingIrrigationSource       3755 non-null   object \n",
+      " 16  TransplantingIrrigationPowerSource  3367 non-null   object \n",
+      " 17  TransIrriCost                       2988 non-null   float64\n",
+      " 18  StandingWater                       3632 non-null   float64\n",
+      " 19  OrgFertilizers                      2535 non-null   object \n",
+      " 20  Ganaura                             1453 non-null   float64\n",
+      " 21  CropOrgFYM                          1196 non-null   float64\n",
+      " 22  PCropSolidOrgFertAppMethod          2533 non-null   object \n",
+      " 23  NoFertilizerAppln                   3870 non-null   int64  \n",
+      " 24  CropbasalFerts                      3682 non-null   object \n",
+      " 25  BasalDAP                            3327 non-null   float64\n",
+      " 26  BasalUrea                           2166 non-null   float64\n",
+      " 27  MineralFertAppMethod                3870 non-null   object \n",
+      " 28  FirstTopDressFert                   3385 non-null   object \n",
+      " 29  1tdUrea                             3314 non-null   float64\n",
+      " 30  1appDaysUrea                        3314 non-null   float64\n",
+      " 31  2tdUrea                             1176 non-null   float64\n",
+      " 32  2appDaysUrea                        1170 non-null   float64\n",
+      " 33  MineralFertAppMethod.1              3389 non-null   object \n",
+      " 34  Harv_method                         3870 non-null   object \n",
+      " 35  Harv_date                           3870 non-null   object \n",
+      " 36  Harv_hand_rent                      3618 non-null   float64\n",
+      " 37  Threshing_date                      3870 non-null   object \n",
+      " 38  Threshing_method                    3870 non-null   object \n",
+      " 39  Residue_length                      3870 non-null   int64  \n",
+      " 40  Residue_perc                        3870 non-null   int64  \n",
+      " 41  Stubble_use                         3870 non-null   object \n",
+      " 42  Acre                                3870 non-null   float64\n",
+      " 43  Yield                               3870 non-null   int64  \n",
+      "dtypes: float64(14), int64(7), object(23)\n",
+      "memory usage: 1.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7f0713e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date_col=[\"Threshing_date\", \"RcNursEstDate\", \"Harv_date\", \"CropTillageDate\", \"RcNursEstDate\", \"SeedingSowingTransplanting\"]\n",
+    "for col in date_col:\n",
+    "    train[col]= pd.to_datetime(train[col])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "62cabdc4",
    "metadata": {},
    "outputs": [
     {
@@ -523,15 +603,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "7f0713e6",
+   "execution_count": null,
+   "id": "f7dd34c6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "date_col=[\"Threshing_date\", \"RcNursEstDate\", \"Harv_date\", \"CropTillageDate\", \"RcNursEstDate\", \"SeedingSowingTransplanting\"]\n",
-    "for col in date_col:\n",
-    "    train[col]= pd.to_datetime(train[col])"
+    "# Feature extraction: Extract year, month, and day as separate features\n",
+    "for col in date_columns:\n",
+    "    df[col + '_Year'] = df[col].dt.year\n",
+    "    df[col + '_Month'] = df[col].dt.month\n",
+    "    df[col + '_Day'] = df[col].dt.day\n",
+    "\n",
+    "# Time intervals: Calculate time intervals between key dates\n",
+    "df['Time_Between_Tillage_Est'] = (df['RcNursEstDate'] - df['CropTillageDate']).dt.days\n",
+    "df['Time_Between_Sowing_Harvest'] = (df['Harv_date'] - df['SeedingSowingTransplanting']).dt.days\n",
+    "\n",
+    "# Cyclical encoding: Encode month as a cyclical feature (sine and cosine)\n",
+    "df['Harv_date_Month_Sin'] = np.sin(2 * np.pi * df['Harv_date'].dt.month / 12)\n",
+    "df['Harv_date_Month_Cos'] = np.cos(2 * np.pi * df['Harv_date'].dt.month / 12)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca06aebf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b1bacba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba23c288",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -543,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "8070f95e",
    "metadata": {},
    "outputs": [
@@ -553,7 +667,7 @@
        "Index(['Ganaura', 'CropOrgFYM', '2tdUrea', '2appDaysUrea'], dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "8e79a222",
    "metadata": {},
    "outputs": [],
@@ -577,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "4db25b21",
    "metadata": {},
    "outputs": [],
@@ -596,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "d3885ec7",
    "metadata": {},
    "outputs": [],
@@ -615,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "92b7e8ac",
    "metadata": {},
    "outputs": [],
@@ -629,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "ff3dd17b",
    "metadata": {},
    "outputs": [],
@@ -643,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "8a60da60",
    "metadata": {},
    "outputs": [],
@@ -654,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "d7aec0a3",
    "metadata": {},
    "outputs": [],
@@ -664,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "fb0993b7",
    "metadata": {},
    "outputs": [],
@@ -682,17 +796,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "9fa0ed5a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5611066235269924"
+       "0.506393379473689"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "aa9c3f1f",
    "metadata": {},
    "outputs": [],
@@ -746,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "17c464c6",
    "metadata": {},
    "outputs": [],
@@ -760,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "b1fda598",
    "metadata": {},
    "outputs": [],
@@ -798,6 +912,24 @@
    "source": [
     "r2_score(y, u)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0aff9a8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "0.90"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b5f0621",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
