--- a/work.ipynb
+++ b/work.ipynb
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "62cabdc4",
+   "id": "d00be7c5",
    "metadata": {},
    "outputs": [
     {
@@ -603,30 +603,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f7dd34c6",
+   "execution_count": 20,
+   "id": "499392c3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Feature extraction: Extract year, month, and day as separate features\n",
-    "for col in date_columns:\n",
-    "    df[col + '_Year'] = df[col].dt.year\n",
-    "    df[col + '_Month'] = df[col].dt.month\n",
-    "    df[col + '_Day'] = df[col].dt.day\n",
+    "for col in date_col:\n",
+    "    train[col + '_Year'] = train[col].dt.year\n",
+    "    train[col + '_Month'] = train[col].dt.month\n",
+    "    train[col + '_Day'] = train[col].dt.day\n",
     "\n",
     "# Time intervals: Calculate time intervals between key dates\n",
-    "df['Time_Between_Tillage_Est'] = (df['RcNursEstDate'] - df['CropTillageDate']).dt.days\n",
-    "df['Time_Between_Sowing_Harvest'] = (df['Harv_date'] - df['SeedingSowingTransplanting']).dt.days\n",
+    "train['Time_Between_Tillage_Est'] = (train['RcNursEstDate'] - train['CropTillageDate']).dt.days\n",
+    "train['Time_Between_Sowing_Harvest'] = (train['Harv_date'] - train['SeedingSowingTransplanting']).dt.days\n",
     "\n",
     "# Cyclical encoding: Encode month as a cyclical feature (sine and cosine)\n",
-    "df['Harv_date_Month_Sin'] = np.sin(2 * np.pi * df['Harv_date'].dt.month / 12)\n",
-    "df['Harv_date_Month_Cos'] = np.cos(2 * np.pi * df['Harv_date'].dt.month / 12)\n"
+    "train['Harv_date_Month_Sin'] = np.sin(2 * np.pi * train['Harv_date'].dt.month / 12)\n",
+    "train['Harv_date_Month_Cos'] = np.cos(2 * np.pi * train['Harv_date'].dt.month / 12)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a7564bab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ID', 'District', 'Block', 'CultLand', 'CropCultLand',\n",
+       "       'LandPreparationMethod', 'CropTillageDate', 'CropTillageDepth',\n",
+       "       'CropEstMethod', 'RcNursEstDate', 'SeedingSowingTransplanting',\n",
+       "       'SeedlingsPerPit', 'NursDetFactor', 'TransDetFactor',\n",
+       "       'TransplantingIrrigationHours', 'TransplantingIrrigationSource',\n",
+       "       'TransplantingIrrigationPowerSource', 'TransIrriCost', 'StandingWater',\n",
+       "       'OrgFertilizers', 'Ganaura', 'CropOrgFYM', 'PCropSolidOrgFertAppMethod',\n",
+       "       'NoFertilizerAppln', 'CropbasalFerts', 'BasalDAP', 'BasalUrea',\n",
+       "       'MineralFertAppMethod', 'FirstTopDressFert', '1tdUrea', '1appDaysUrea',\n",
+       "       '2tdUrea', '2appDaysUrea', 'MineralFertAppMethod.1', 'Harv_method',\n",
+       "       'Harv_date', 'Harv_hand_rent', 'Threshing_date', 'Threshing_method',\n",
+       "       'Residue_length', 'Residue_perc', 'Stubble_use', 'Acre', 'Yield',\n",
+       "       'Threshing_date_Year', 'Threshing_date_Month', 'Threshing_date_Day',\n",
+       "       'RcNursEstDate_Year', 'RcNursEstDate_Month', 'RcNursEstDate_Day',\n",
+       "       'Harv_date_Year', 'Harv_date_Month', 'Harv_date_Day',\n",
+       "       'CropTillageDate_Year', 'CropTillageDate_Month', 'CropTillageDate_Day',\n",
+       "       'SeedingSowingTransplanting_Year', 'SeedingSowingTransplanting_Month',\n",
+       "       'SeedingSowingTransplanting_Day', 'Time_Between_Tillage_Est',\n",
+       "       'Time_Between_Sowing_Harvest', 'Harv_date_Month_Sin',\n",
+       "       'Harv_date_Month_Cos'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "caa3e8a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lag features: Create lag features for selected date columns\n",
+    "lag_columns = ['CropTillageDate', 'Harv_date']\n",
+    "lag_periods = [1, 2]  # Define the number of periods to lag (e.g., 1 period = 1 year)\n",
+    "for col in lag_columns:\n",
+    "    for period in lag_periods:\n",
+    "        train[col + f'_Lag{period}'] = train[col] - pd.DateOffset(years=period)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca06aebf",
+   "id": "fd376bca",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -634,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b1bacba",
+   "id": "08183e0e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -642,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba23c288",
+   "id": "a76bc06e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -916,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0aff9a8e",
+   "id": "e94bc01a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b5f0621",
+   "id": "fe322f06",
    "metadata": {},
    "outputs": [],
    "source": []
