--- a/work.ipynb
+++ b/work.ipynb
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "0ccfdcbc",
+   "id": "ed83c7b7",
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "51a856ac",
+   "id": "f7f4409e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e9d5bb0",
+   "id": "d869cbbc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "fab2d674",
+   "id": "8e8c8529",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37ebd2d5",
+   "id": "700f496b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "8d69b16b",
+   "id": "01bae395",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "16493c5f",
+   "id": "84adb7c3",
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e2e283b",
+   "id": "3f9d75f2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "c5249613",
+   "id": "6ae793ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "158ee335",
+   "id": "cdfad6b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "215cebb2",
+   "id": "af2585f4",
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "ed1ad499",
+   "id": "adc4908d",
    "metadata": {},
    "outputs": [
     {
@@ -888,15 +888,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ed6787e",
+   "id": "0fca164d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
-   "id": "902cba79",
+   "execution_count": 171,
+   "id": "232f6b00",
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
        "PCropSolidOrgFertAppMethod            1337\n",
        "CropbasalFerts                           0\n",
        "MineralFertAppMethod                     0\n",
-       "FirstTopDressFert                      485\n",
+       "FirstTopDressFert                        0\n",
        "MineralFertAppMethod.1                 481\n",
        "Harv_method                              0\n",
        "Threshing_method                         0\n",
@@ -952,7 +952,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "503fcc42",
+   "id": "c053fac0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -972,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "e6681346",
+   "id": "43bf9f78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,8 +988,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
-   "id": "32fa13b1",
+   "execution_count": 172,
+   "id": "287444c0",
    "metadata": {},
    "outputs": [
     {
@@ -998,19 +998,27 @@
        "dtype('O')"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2[\"FirstTopDressFert\"].dtype"
+    "df2[\"MineralFertAppMethod.1\"].dtype"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8862cf6b",
+   "id": "e0fcccd7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "612d7a74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1035,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "e7091b3d",
+   "id": "9ea7f597",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "4a059c9d",
+   "id": "ffb9d643",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "21679fb0",
+   "id": "0abad61f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0778a398",
+   "id": "4d701da1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1074bde",
+   "id": "605ad1f9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1103,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "e9e79a0f",
+   "id": "c98a60f3",
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1159,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "0afd2caf",
+   "id": "e5451beb",
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "2fa8b3e3",
+   "id": "b5e445c3",
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "a32ee279",
+   "id": "40dac187",
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "6fbaf625",
+   "id": "aa7d021a",
    "metadata": {},
    "outputs": [
     {
@@ -1235,14 +1243,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28706b4a",
+   "id": "976f9afa",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a26928a4",
+   "id": "3eefdb0d",
    "metadata": {},
    "source": [
     "The decision to fill missing values with random numbers within the range of existing values or with the mean/median values depends on the nature of your data and the problem you are trying to solve. Let's consider the pros and cons of each approach:\n",
@@ -1286,7 +1294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "843fbdfc",
+   "id": "60a608fe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1294,7 +1302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24d91992",
+   "id": "0e60f0d1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1302,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f5df31a",
+   "id": "f62ce69f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1310,7 +1318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e494770",
+   "id": "8db26a8c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1318,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb2fe1d3",
+   "id": "79e43e93",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1326,7 +1334,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "54daa0f9",
+   "id": "fa697aad",
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "012e4cf0",
+   "id": "c5189c15",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1394,7 +1402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58c866be",
+   "id": "73d88d55",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1402,7 +1410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b893a9a2",
+   "id": "e5828b63",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1410,7 +1418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea547888",
+   "id": "e4cd8b70",
    "metadata": {},
    "outputs": [],
    "source": []
