--- a/python tutorial.ipynb
+++ b/python tutorial.ipynb
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "47e3e011",
    "metadata": {},
    "outputs": [],
@@ -792,65 +792,257 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "375bc7fd",
+   "cell_type": "markdown",
+   "id": "7ebaf459",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# String Datatype\n",
+    "they are sequence of characters inside quote"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "86b9203c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = \"olaitan\"\n",
+    "name = 'olaitan'\n",
+    "introduction = \"\"\"  this is\n",
+    "                 introduction to \n",
+    "                 python \"\"\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "17a15aba",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(name)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "514ea605",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(a)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "634999b2",
+   "cell_type": "markdown",
+   "id": "76123624",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# index and slicing\n",
+    "idexing is just a way of return a character at a given position"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6129463d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "introduction = \"\"\"this is introduction to python\"\"\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fd534327",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# any datatype in python has zero base index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "610d4ebc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'t'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# return the first character from the introduction variable\n",
+    "introduction[0]   # forward indexing "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "34731271",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'u'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# return u from the introduction variable\n",
+    "introduction[14]  # forward indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "91f0f955",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'y'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using backward indexing return  y from the introduction\n",
+    "introduction[-5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae1cd092",
+   "metadata": {},
+   "source": [
+    "# slicing will return set of characters within range\n",
+    "\n",
+    "[idexNO: postionNO: stepskip]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "97ce5532",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'introduction'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "introduction = \"\"\"this is introduction to python\"\"\"\n",
+    "\n",
+    "# return introduction from the variable above\n",
+    "introduction[8:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2d5d9af8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ti sit'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# return \"ti sit\" from the variable above\n",
+    "introduction[0:11: 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3e6bb622",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tdtn'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tdtn\n",
+    "introduction[10:22:3]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "610d4ebc",
+   "id": "9ee9fc18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install jupytertheme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beae1d9a",
    "metadata": {},
    "outputs": [],
    "source": []
