--- a/work.ipynb
+++ b/work.ipynb
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "id": "232f6b00",
    "metadata": {},
    "outputs": [
@@ -925,8 +925,8 @@
        "1appDaysUrea                           556\n",
        "Harv_hand_rent                         252\n",
        "Acre                                     0\n",
-       "RcNursEstDate_Year                      83\n",
-       "RcNursEstDate_Month                     83\n",
+       "RcNursEstDate_Year                       0\n",
+       "RcNursEstDate_Month                      0\n",
        "RcNursEstDate_Day                        0\n",
        "Time_Between_Tillage_Est                 0\n",
        "Harv_date_Month_Sin                      0\n",
@@ -934,7 +934,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "id": "c053fac0",
    "metadata": {},
    "outputs": [
@@ -955,13 +955,13 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2[\"RcNursEstDate_Month\"].dtype"
+    "df2[\"Harv_hand_rent\"].dtype"
    ]
   },
   {
@@ -1096,15 +1096,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ec4c739",
+   "id": "db0144e1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Step 2: Identify missing values in the numeric column\n",
+    "missing_values = df2['RcNursEstDate_Year'].isnull()\n",
+    "\n",
+    "# Step 3: Generate random numbers within the range of existing values\n",
+    "mean_value = df2['RcNursEstDate_Year'].mean()\n",
+    "std_dev = df2['RcNursEstDate_Year'].std()\n",
+    "\n",
+    "# Convert low and high to the same data type as the column\n",
+    "low_value = df2['RcNursEstDate_Year'].min()\n",
+    "high_value = df2['RcNursEstDate_Year'].max()\n",
+    "\n",
+    "random_values = np.random.normal(loc=mean_value, scale=std_dev, size=sum(missing_values))\n",
+    "\n",
+    "# Clip the random values to the range of the existing values\n",
+    "random_values = np.clip(random_values, low_value, high_value)\n",
+    "\n",
+    "# Step 4: Fill missing values with the randomly generated numbers\n",
+    "df2.loc[missing_values, 'RcNursEstDate_Year'] = random_values\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "bc985c88",
+   "id": "0c6a8670",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1131,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "1514cd46",
+   "id": "fef80fe8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "a3aa2249",
+   "id": "34f83b9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,7 +1204,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "3176ff33",
+   "id": "edfc324e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aaaddc0",
+   "id": "9bcd5795",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1220,7 +1239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e8d4c50",
+   "id": "197b0b96",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1228,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4206a26",
+   "id": "027502c5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1236,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bac0602d",
+   "id": "ed82f616",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1279,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff680062",
+   "id": "0f23e0fe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1287,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02233165",
+   "id": "6c5c83fb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1295,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "500d9f63",
+   "id": "a7b0a977",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1303,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d352de7",
+   "id": "f342f2d5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1311,7 +1330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61ce4480",
+   "id": "e2e76df9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1319,7 +1338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fec7d0e5",
+   "id": "51b62abb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1327,7 +1346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9295835b",
+   "id": "67d368bd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1335,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c631025",
+   "id": "0b69d24c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1343,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39bac766",
+   "id": "73cd009d",
    "metadata": {},
    "outputs": [],
    "source": []
